--- a/ui/index.html
+++ b/ui/index.html
@@ -9,8 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
-        </div>
+            Hi! I am Chandra sekhar.. It is my app!!        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
